--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
              <ul id="nav">
                  <li id="navi1" class="current">
-                 <a href="#section-1" title="Demandez-moi ce que je peux faire pour vous" class="" rel="">ACCUEIL</a>
+                 <a href="#section-1" title="Demandez-moi ce que je peux faire pour vous" class="" rel="">Accueil</a>
                  </li>
                  <li id="navi2">
-                 <a href="#section-2" title="Ce que j'ai fait depuis Let's root#" class="" rel="">RÉALISATIONS</a>
+                 <a href="#section-2" title="Ce que j'ai fait depuis Let's root#" class="" rel="">Réalisations</a>
                  </li>
                  <li id="navi3" class="">
-                 <a href="#section-3" title="Demandez-moi ce que je peux faire pour vous" class="" rel="">CONTACT</a>
+                 <a href="#section-3" title="Demandez-moi ce que je peux faire pour vous" class="" rel="">Contact</a>
                  </li>
                  <li id="navi4">
-                 <a href="http://re.vu/stephane" title="Ce que j'ai fait avant Let's root# (nouvelle fenêtre)" class="" target="_blank" rel="">CV (nouvelle fenêtre)</a>
+                 <a href="http://re.vu/stephane" title="Ce que j'ai fait avant Let's root# (nouvelle fenêtre)" class="" target="_blank" rel="">CV</a>
                  </li>
              </ul>
 
