--- a/index.html
+++ b/index.html
@@ -67,21 +67,17 @@
                  <div class="section" id="section-3">
                      <div class="content">
                          <p>
-                         Associations, Artisans, Commerçants, Particuliers, je développe pour vous des <strong>sites de qualités</strong> à moindre coût.
+                         Associations, Artisans, Commerçants, Particuliers, je développe pour vous des <strong>sites de qualités</strong> selon vos besoins.
                          </p>
                          <p>
-                         Agences Web, SS2I, Bureaux de développement, je mets mes compétences de développeur web à <strong>votre service</strong>.
+                         Agences Web, SS2I, Bureaux de développement, PME/PMI, je mets mes compétences de développeur web à <strong>votre service</strong>.
                          </p>
                          <p>
                          Pour les plus geek d'entre vous, mon code est visible sur <a href="https://github.com/Anselme" title="Code de Stéphane Girault sur Github">Github</a>.
                          </p>
                          <h3>CONTACT</h3>
                          <p>
-                         stephane@letsroot.net
-                         </p>
-                         <h3>CV</h3>
-                         <p>
-                         <a href="http://www.doyoubuzz.com/stephane-girault/" alt="CV Stéphane Girault ">Mes vies antérieures</a>
+                         <a href="mailto:stephane@letsroot.net">stephane@letsroot.net</a>
                          </p>
                      </div>
                  </div>
@@ -95,9 +91,6 @@
              <script type='text/javascript' src='js/jquery.tipsy.js'></script>
              <script type='text/javascript' src='js/menu.js'></script>
              <script type='text/javascript' src='js/letsroot.js'></script>
-             <script type="text/javascript">
-                 $(document).ready(function() {$('#nav').onePageNav();});
-             </script>
              <script type="text/javascript">
                  var _gaq = _gaq || [];
                  _gaq.push(['_setAccount', 'UA-25220757-1']);
