--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                      <div class="content">
                          <div class="row">
                              <div class="span-one-third">
+                                 <a href="http://dd2012.paysdelaloire.fr" target="_blank" title="Le développement durable dans les Pays de la Loire" rel="tipsy">
+                                     <img src="img/pdl.png" alt="" width="256" height="160" class="diapo">
+                                 </a>
+                             </div>
+                             <div class="span-one-third">
                                  <a href="http://www.lapaperie.fr" target="_blank" title="La Paperie - Centre National des Arts de la Rue" rel="tipsy">
                                      <img src="img/lapaperie.png" alt="" width="256" height="160" class="diapo">
                                  </a>
@@ -55,12 +60,14 @@
                                      <img src="img/actes-environnement.png" alt="" width="256" height="160" class="diapo">
                                  </a>
                              </div>
+                         </div>
+                         <div class="row">
                              <div class="span-one-third">
                                  <a href="http://nantes-data-journalisme.net" target="_blank" title="Laboratoire de Data Journalism" rel="tipsy">
                                      <img src="img/datanantes.png" alt="" width="256" height="160" class="diapo">
                                  </a>
                              </div>
-                         </div>
+                             </div>
                      </div>
                  </div>
 
