last version avant changement

--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
 
                  <div class="section" id="section-3">
                      <div class="content">
+                         <h3>DÉVELOPPEMENT WEB</h3>
                          <p>
-                         Associations, Artisans, Commerçants, Particuliers, je développe pour vous des <strong>sites de qualités</strong> selon vos besoins.
-                         </p>
-                         <p>
-                         Agences Web, SS2I, Bureaux de développement, PME/PMI, je mets mes compétences de développeur web à <strong>votre service</strong>.
+                         Agences Web, SS2I, Bureaux de développement, StartUp, je mets mes compétences de développeur web à <strong>votre service</strong>.
                          </p>
                          <p>
                          Pour les plus geek d'entre vous, mon code est visible sur <a href="https://github.com/Anselme" title="Code de Stéphane Girault sur Github">Github</a>.
@@ -91,7 +89,7 @@
 
              </div>
 
-             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
+             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
              <script type='text/javascript' src='js/sizzle.js'></script>
              <script type='text/javascript' src='js/jquery.scrollTo-1.4.2-min.js'></script>
              <script type='text/javascript' src='js/jquery.nav.min.js'></script>
