--- a/index.html
+++ b/index.html
@@ -1,102 +1,140 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Astral 2.0 by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-    <head>
-        <title>Let's root# | Green geek </title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="description" content="Développeur Web à Angers">
+	<head>
+		<title>Let's Root# | Green Geek</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name="description" content="Développeur Web Angers" />
         <meta name="author" content="Stéphane Girault">
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-        <link href="css/reset.css" rel="stylesheet" type="text/css" />
-        <link href="css/main.css" rel="stylesheet" type="text/css" />
-        <link href="css/menu.css" rel="stylesheet" type="text/css" />
-        <link href="css/gallerie.css" rel="stylesheet" type="text/css" />
-        <link href="css/tipsy.css" rel="stylesheet" type="text/css" />
-        <script src="js/modernizr.custom.57212.js"></script>
-     </head>
+		<meta name="keywords" content="" />
+		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet" />
+		<script src="js/jquery-1.9.1.min.js"></script>
+		<script src="js/config.js"></script>
+		<script src="js/skel.min.js"></script>
+		<noscript>
+			<link rel="stylesheet" href="css/skel-noscript.css" />
+			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/style-desktop.css" />
+			<link rel="stylesheet" href="css/noscript.css" />
+		</noscript>
+		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
+	</head>
+	<body class="homepage">
 
-     <body>
+		<!-- Wrapper-->
+			<div id="wrapper">
 
-         <img src="img/background.jpg" class="bg">
+				<!-- Nav -->
+					<nav id="nav">
+						<a href="#me" class="icon icon-user active"><span>Accueil</span></a>
+						<a href="#work" class="icon icon-folder"><span>Réalisations</span></a>
+						<a href="#email" class="icon icon-mail"><span>Contact</span></a>
+						<a href="http://re.vu/stephane" class="icon icon-share" target="_blank" ><span>CV</span></a>
+					</nav>
 
-             <ul id="nav">
-                 <li id="navi1" class="current">
-                 <a href="#section-1" title="Demandez-moi ce que je peux faire pour vous" class="" rel="">Accueil</a>
-                 </li>
-                 <li id="navi2">
-                 <a href="#section-2" title="Ce que j'ai fait depuis Let's root#" class="" rel="">Réalisations</a>
-                 </li>
-                 <li id="navi3" class="">
-                 <a href="#section-3" title="Demandez-moi ce que je peux faire pour vous" class="" rel="">Contact</a>
-                 </li>
-                 <li id="navi4">
-                 <a href="http://re.vu/stephane" title="Ce que j'ai fait avant Let's root# (nouvelle fenêtre)" class="" target="_blank" rel="">CV</a>
-                 </li>
-             </ul>
+				<!-- Main -->
+					<div id="main">
 
-             <div id="container">
-                 <div class="section" id="section-1">
-                     <img src="img/gribouillis.png" class="grib">
-                     <div class="title">
-                         <h1>LET<span>'</span>S ROOT#</h1>
-                         <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
-                     </div>
-                 </div>
+						<!-- Me -->
+							<article id="me" class="panel">
+								<header>
+									<h1>Let's Root#</h1>
+									<span class="byline">Développement d'Applications Web</span>
+								</header>
+								<a href="#work" class="jumplink pic">
+									<span class="jumplink arrow icon icon-right"><span>Clients & Réalisations</span></span>
+									<img src="images/me.jpg" alt="" />
+								</a>
+							</article>
 
-                 <div class="section" id="section-2">
-                     <div class="content">
-                         <div class="row">
-                             <div class="span-one-third">
-                                 <a href="http://dd2012.paysdelaloire.fr" target="_blank" title="Le développement durable dans les Pays de la Loire" rel="tipsy">
-                                     <img src="img/pdl.png" alt="" width="256" height="160" class="diapo">
-                                 </a>
-                             </div>
-                             <div class="span-one-third">
-                                 <a href="http://www.lapaperie.fr" target="_blank" title="La Paperie - Centre National des Arts de la Rue" rel="tipsy">
-                                     <img src="img/lapaperie.png" alt="" width="256" height="160" class="diapo">
-                                 </a>
-                             </div>
-                             <div class="span-one-third">
-                                 <a href="http://actes-environnement.com" target="_blank" title="Actes Environnement - Valorisation des Déchets" rel="tipsy">
-                                     <img src="img/actes-environnement.png" alt="" width="256" height="160" class="diapo">
-                                 </a>
-                             </div>
-                         </div>
-                         <div class="row">
-                             <div class="span-one-third">
-                                 <a href="http://nantes-data-journalisme.net" target="_blank" title="Laboratoire de Data Journalism" rel="tipsy">
-                                     <img src="img/datanantes.png" alt="" width="256" height="160" class="diapo">
-                                 </a>
-                             </div>
-                             </div>
-                     </div>
-                 </div>
+						<!-- Work -->
+							<article id="work" class="panel">
+								<header>
+									<h2>Clients & Réalisations</h2>
+								</header>
+								<p>
+                                    Agences Web, SS2I, Bureaux de développement, StartUp, je mets mes compétences de développeur web à <strong>votre service</strong>.
+								<br/>
+                                    Pour les plus geek d'entre vous, mon code est visible sur <a href="https://github.com/Anselme" title="Code de Stéphane Girault sur Github">Github</a>.
+								</p>
+								<section class="is-gallery">
+									<div class="row">
+										<div class="4u">
+											<a href="http://actes-environnement.com" class="image image-full" title="Actes Environnement - Valorisation des Déchets"><img src="images/1.png" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://www.lapaperie.fr" class="image image-full" title="La Paperie - Centre National des Arts de la Rue"><img src="images/3.png" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://nantes-data-journalisme.net" class="image image-full" title="Laboratoire de Data Journalism"><img src="images/2.png" alt=""></a>
+										</div>
+									</div>
+									<div class="row">
+										<div class="4u">
+											<a href="http://dd2012.paysdelaloire.fr" class="image image-full" title="Le développement durable dans les Pays de la Loire"><img src="images/4.png" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://www.stephanieperroin.com" class="image image-full" title="Architecte d'Intérieur | Stéphanie Perroin | La Baule"><img src="images/5.png" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://www.terraeco.net" class="image image-full" title="Terra eco, le magazine qui change le monde"><img src="images/6.png" alt=""></a>
+										</div>
+									</div>
+								</section>
+							</article>
 
-                 <div class="section" id="section-3">
-                     <div class="content">
-                         <h3>DÉVELOPPEMENT WEB</h3>
-                         <p>
-                         Agences Web, SS2I, Bureaux de développement, StartUp, je mets mes compétences de développeur web à <strong>votre service</strong>.
-                         </p>
-                         <p>
-                         Pour les plus geek d'entre vous, mon code est visible sur <a href="https://github.com/Anselme" title="Code de Stéphane Girault sur Github">Github</a>.
-                         </p>
-                         <h3>CONTACT</h3>
-                         <p>
-                         <a href="mailto:stephane@letsroot.net">stephane@letsroot.net</a>
-                         </p>
-                     </div>
-                 </div>
+						<!-- Email -->
+							<article id="email" class="panel">
+								<header>
+									<h2>Contact</h2>
+								</header>
+								<form action="#" method="post">
+									<div>
+										<div class="row">
+											<div class="6u">
+												<input type="text" class="text" name="name" placeholder="Nom" />
+											</div>
+											<div class="6u">
+												<input type="text" class="text" name="email" placeholder="Courriel" />
+											</div>
+										</div>
+										<div class="row">
+											<div class="12u">
+												<input type="text" class="text" name="subject" placeholder="Sujet" />
+											</div>
+										</div>
+										<div class="row">
+											<div class="12u">
+												<textarea name="message" placeholder="Message"></textarea>
+											</div>
+										</div>
+										<div class="row">
+											<div class="12u">
+												<input type="submit" class="button" value="et Hop ! " />
+											</div>
+										</div>
+									</div>
+								</form>
+							</article>
 
-             </div>
+					</div>
 
-             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8/jquery.min.js"></script>
-             <script type='text/javascript' src='js/sizzle.js'></script>
-             <script type='text/javascript' src='js/jquery.scrollTo-1.4.2-min.js'></script>
-             <script type='text/javascript' src='js/jquery.nav.min.js'></script>
-             <script type='text/javascript' src='js/jquery.tipsy.js'></script>
-             <script type='text/javascript' src='js/menu.js'></script>
-             <script type='text/javascript' src='js/letsroot.js'></script>
-             <script type="text/javascript">
+				<!-- Footer -->
+					<div id="footer">
+						<ul class="links">
+                            <li>Enraciné par <a href="http://letsroot.net">Let's Root#</a></li>
+							<li>Images : <a href="http://lidiakostanek.blogspot.fr/">Lidia Kostanek</a></li>
+							<li>Design : <a href="http://html5up.net/">html5 up</a> revisité par Let's Root#</li>
+						</ul>
+					</div>
+
+			</div>
+
+            <script type="text/javascript">
                  var _gaq = _gaq || [];
                  _gaq.push(['_setAccount', 'UA-25220757-1']);
                  _gaq.push(['_trackPageview']);
@@ -107,5 +145,5 @@
               var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
               })();
           </script>
-      </body>
-  </html>
+	</body>
+</html>
