capture d'ecran propre

--- a/index.html
+++ b/index.html
@@ -64,24 +64,24 @@
 								<section class="is-gallery">
 									<div class="row">
 										<div class="4u">
-											<a href="http://actes-environnement.com" class="image image-full" title="Actes Environnement - Valorisation des Déchets"><img src="images/1.png" alt=""></a>
+											<a href="http://actes-environnement.com" class="image image-full diapo" title="Actes Environnement - Valorisation des Déchets"><img src="images/1.png" alt=""></a>
 										</div>
 										<div class="4u">
-											<a href="http://www.lapaperie.fr" class="image image-full" title="La Paperie - Centre National des Arts de la Rue"><img src="images/3.png" alt=""></a>
+											<a href="http://www.lapaperie.fr" class="image image-full diapo" title="La Paperie - Centre National des Arts de la Rue"><img src="images/3.png" alt=""></a>
 										</div>
 										<div class="4u">
-											<a href="http://nantes-data-journalisme.net" class="image image-full" title="Laboratoire de Data Journalism"><img src="images/2.png" alt=""></a>
+											<a href="http://nantes-data-journalisme.net" class="image image-full diapo" title="Laboratoire de Data Journalism"><img src="images/2.png" alt=""></a>
 										</div>
 									</div>
 									<div class="row">
 										<div class="4u">
-											<a href="http://dd2012.paysdelaloire.fr" class="image image-full" title="Le développement durable dans les Pays de la Loire"><img src="images/4.png" alt=""></a>
+											<a href="http://dd2012.paysdelaloire.fr" class="image image-full diapo" title="Le développement durable dans les Pays de la Loire"><img src="images/4.png" alt=""></a>
 										</div>
 										<div class="4u">
-											<a href="http://www.stephanieperroin.com" class="image image-full" title="Architecte d'Intérieur | Stéphanie Perroin | La Baule"><img src="images/5.png" alt=""></a>
+											<a href="http://www.stephanieperroin.com" class="image image-full diapo" title="Architecte d'Intérieur | Stéphanie Perroin | La Baule"><img src="images/5.png" alt=""></a>
 										</div>
 										<div class="4u">
-											<a href="http://www.terraeco.net" class="image image-full" title="Terra eco, le magazine qui change le monde"><img src="images/6.png" alt=""></a>
+											<a href="http://www.terraeco.net" class="image image-full diapo" title="Terra eco, le magazine qui change le monde"><img src="images/6.png" alt=""></a>
 										</div>
 									</div>
 								</section>
@@ -127,7 +127,7 @@
 					<div id="footer">
 						<ul class="links">
                             <li>Enraciné par <a href="http://letsroot.net">Let's Root#</a></li>
-							<li>Images : <a href="http://lidiakostanek.blogspot.fr/">Lidia Kostanek</a></li>
+							<li>Images : <a href="http://lidiakostanek.blogspot.fr/" title="Lidia Kostanek Graphiste">Lidia Kostanek</a></li>
 							<li>Design : <a href="http://html5up.net/">html5 up</a> revisité par Let's Root#</li>
 						</ul>
 					</div>
