--- a/index.html
+++ b/index.html
@@ -98,20 +98,20 @@
 									<div>
 										<div class="row">
 											<div class="6u">
-												<input type="text" class="text" name="name" placeholder="Nom" />
+												<input type="text" class="text" name="name" placeholder="Nom" required="required"/>
 											</div>
 											<div class="6u">
-												<input type="text" class="text" name="email" placeholder="Courriel" />
+												<input type="email" class="text" name="email" placeholder="Courriel" required="required"/>
 											</div>
 										</div>
 										<div class="row">
 											<div class="12u">
-												<input type="text" class="text" name="subject" placeholder="Sujet" />
+												<input type="text" class="text" name="subject" placeholder="Sujet" required="required"/>
 											</div>
 										</div>
 										<div class="row">
 											<div class="12u">
-												<textarea name="message" placeholder="Message"></textarea>
+												<textarea name="message" placeholder="Message" required="required"></textarea>
 											</div>
 										</div>
 										<div class="row">
