--- a/index.html
+++ b/index.html
@@ -12,12 +12,7 @@
         <meta name="author" content="Stéphane Girault">
 		<meta name="keywords" content="" />
 		<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400" rel="stylesheet" />
-		<script src="js/jquery-1.9.1.min.js"></script>
-		<script src="js/config.js"></script>
-		<script src="js/skel.min.js"></script>
         <link href="css/tipsy.css" rel="stylesheet" type="text/css" />
-        <script type='text/javascript' src='js/jquery.tipsy.js'></script>
-        <script type='text/javascript' src='js/letsroot.js'></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -140,6 +135,11 @@
 
 			</div>
 
+            <script type='text/javascript' src="js/jquery-1.9.1.min.js"></script>
+            <script type='text/javascript' src="js/config.js"></script>
+            <script type='text/javascript' src="js/skel.min.js"></script>
+            <script type='text/javascript' src='js/jquery.tipsy.js'></script>
+            <script type='text/javascript' src='js/letsroot.js'></script>
             <script type="text/javascript">
                  var _gaq = _gaq || [];
                  _gaq.push(['_setAccount', 'UA-25220757-1']);
@@ -152,9 +152,5 @@
               })();
           </script>
 
-          <script type="text/javascript">
-              $('a[rel="tipsy-n"]').tipsy({gravity: 'n'});
-              $('a[rel="tipsy-s"]').tipsy({gravity: 's'});
-              </script>
 	</body>
 </html>
