--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#me" class="icon icon-user active"><span>Accueil</span></a>
-						<a href="#work" class="icon icon-folder"><span>Réalisations</span></a>
+						<a href="#work" class="icon icon-folder"><span>Clients</span></a>
 						<a href="#email" class="icon icon-mail"><span>Contact</span></a>
 						<a href="http://re.vu/stephane" class="icon icon-share" target="_blank" ><span>CV</span></a>
 					</nav>
@@ -55,31 +55,41 @@
 									<h2>Clients & Réalisations</h2>
 								</header>
 								<p>
-                                    Agences Web, SS2I, Bureaux de développement, StartUp, je mets mes compétences de développeur web à <strong>votre service</strong>.
+                                    Agences Web, SS2I, StartUp, mes compétences de développeur web à <strong>votre service</strong>.
 								<br/>
                                     Pour les plus geek d'entre vous, mon code est visible sur <a href="https://github.com/Anselme" title="Code de Stéphane Girault sur Github">Github</a>.
 								</p>
 								<section class="is-gallery">
 									<div class="row">
 										<div class="4u">
-											<a href="http://actes-environnement.com" class="image image-full diapo" title="Actes Environnement - Valorisation des Déchets" rel="tipsy-s"><img src="images/1.png" alt=""></a>
+											<a href="http://dd2012.paysdelaloire.fr" class="image image-full diapo" title="Le développement durable - les Pays de la Loire" rel="tipsy-s"><img src="images/4.png" alt=""></a>
 										</div>
 										<div class="4u">
 											<a href="http://www.lapaperie.fr" class="image image-full diapo" title="La Paperie - Centre National des Arts de la Rue" rel="tipsy-s"><img src="images/3.png" alt=""></a>
 										</div>
 										<div class="4u">
-											<a href="http://nantes-data-journalisme.net" class="image image-full diapo" title="Laboratoire de Data Journalism" rel="tipsy-s"><img src="images/2.png" alt=""></a>
+											<a href="http://www.terraeco.net" class="image image-full diapo" title="Terra eco, le magazine qui change le monde" rel="tipsy-s"><img src="images/6.png" alt=""></a>
 										</div>
 									</div>
 									<div class="row">
 										<div class="4u">
-											<a href="http://dd2012.paysdelaloire.fr" class="image image-full diapo" title="Le développement durable dans les Pays de la Loire" rel="tipsy-n"><img src="images/4.png" alt=""></a>
+											<a href="http://actes-environnement.com" class="image image-full diapo" title="Actes Environnement - Valorisation des Déchets" rel="tipsy-e"><img src="images/1.png" alt=""></a>
 										</div>
 										<div class="4u">
-											<a href="http://www.stephanieperroin.com" class="image image-full diapo" title="Architecte d'Intérieur | Stéphanie Perroin | La Baule" rel="tipsy-n"><img src="images/5.png" alt=""></a>
+											<a href="http://www.stephanieperroin.com" class="image image-full diapo" title="Architecte d'Intérieur | Stéphanie Perroin | La Baule" rel="tipsy-s"><img src="images/5.png" alt=""></a>
 										</div>
 										<div class="4u">
-											<a href="http://www.terraeco.net" class="image image-full diapo" title="Terra eco, le magazine qui change le monde" rel="tipsy-n"><img src="images/6.png" alt=""></a>
+											<a href="http://nantes-data-journalisme.net" class="image image-full diapo" title="Laboratoire de Data Journalism" rel="tipsy-w"><img src="images/2.png" alt=""></a>
+										</div>
+									</div>
+									<div class="row">
+										<div class="4u">
+											<a href="http://zoneblanche.org" class="image image-full diapo" title="Cahier d'exercice | Mathieu Delalle" rel="tipsy-n"><img src="images/8.png" alt=""></a>
+										</div>
+										<div class="4u">
+											<a href="http://www.ouestmedialab.fr" class="image image-full diapo" title="Inventer ensemble les médias de demain" rel="tipsy-n"><img src="images/7.png" alt=""></a>
+										</div>
+										<div class="4u">
 										</div>
 									</div>
 								</section>
