cdt35 dans mes clients

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 											<a href="http://www.ouestmedialab.fr" class="image image-full diapo" title="Inventer ensemble les médias de demain" rel="tipsy-n"><img src="images/7.png" alt=""></a>
 										</div>
 										<div class="4u">
+											<a href="http://www.diag35.com" class="image image-full diapo" title=" L’accompagnement numérique des acteurs et des professionnels du tourisme en Haute Bretagne" rel="tipsy-n"><img src="images/11.png" alt=""></a>
 										</div>
 									</div>
 								</section>
