--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
 											<a href="http://www.stephanieperroin.com" class="image image-full diapo" title="Architecte d'Intérieur | Stéphanie Perroin | La Baule" rel="tipsy-s"><img src="images/5.png" alt=""></a>
 										</div>
 										<div class="4u">
-											<a href="http://nantes-data-journalisme.net" class="image image-full diapo" title="Laboratoire de Data Journalism" rel="tipsy-w"><img src="images/2.png" alt=""></a>
+											<a href="http://www.diag35.com" class="image image-full diapo" title=" L’accompagnement numérique des acteurs et des professionnels du tourisme en Haute Bretagne" rel="tipsy-w"><img src="images/11.png" alt=""></a>
 										</div>
 									</div>
 									<div class="row">
 										<div class="4u">
-											<a href="http://zoneblanche.org" class="image image-full diapo" title="Cahier d'exercice | Mathieu Delalle" rel="tipsy-n"><img src="images/8.png" alt=""></a>
+											<a href="http://zoneblanche.org" class="image image-full diapo" title="Cahier d'exercice | Mathieu Delalle" rel="tipsy-e"><img src="images/8.png" alt=""></a>
 										</div>
 										<div class="4u">
 											<a href="http://www.ouestmedialab.fr" class="image image-full diapo" title="Inventer ensemble les médias de demain" rel="tipsy-n"><img src="images/7.png" alt=""></a>
 										</div>
 										<div class="4u">
-											<a href="http://www.diag35.com" class="image image-full diapo" title=" L’accompagnement numérique des acteurs et des professionnels du tourisme en Haute Bretagne" rel="tipsy-n"><img src="images/11.png" alt=""></a>
+											<a href="http://nantes-data-journalisme.net" class="image image-full diapo" title="Laboratoire de Data Journalism" rel="tipsy-w"><img src="images/2.png" alt=""></a>
 										</div>
 									</div>
 								</section>
