--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									<span class="byline">Développement d'Applications Web</span>
 								</header>
 								<a href="#work" class="jumplink pic">
-									<span class="jumplink arrow icon icon-right"><span>Clients & Réalisations</span></span>
+									<span class="jumplink arrow icon icon-right"><span>Clients</span></span>
 									<img src="images/me.jpg" alt="" />
 								</a>
 							</article>
@@ -52,7 +52,7 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Clients & Réalisations</h2>
+									<h2>Clients</h2>
 								</header>
 								<p>
                                     Agences Web, SS2I, StartUp, mes compétences de développeur web à <strong>votre service</strong>.
@@ -73,7 +73,7 @@
 									</div>
 									<div class="row">
 										<div class="4u">
-											<a href="http://actes-environnement.com" class="image image-full diapo" title="Actes Environnement - Valorisation des Déchets" rel="tipsy-e"><img src="images/1.png" alt=""></a>
+											<a href="http://www.lechabada.com" class="image image-full diapo" title="Le Chabada, Club et Salle de concerts, Angers" rel="tipsy-e"><img src="images/9.png" alt=""></a>
 										</div>
 										<div class="4u">
 											<a href="http://www.stephanieperroin.com" class="image image-full diapo" title="Architecte d'Intérieur | Stéphanie Perroin | La Baule" rel="tipsy-s"><img src="images/5.png" alt=""></a>
@@ -89,6 +89,11 @@
 										<div class="4u">
 											<a href="http://www.ouestmedialab.fr" class="image image-full diapo" title="Inventer ensemble les médias de demain" rel="tipsy-n"><img src="images/7.png" alt=""></a>
 										</div>
+										<div class="4u">
+											<a href="http://actes-environnement.com" class="image image-full diapo" title="Actes Environnement - Valorisation des Déchets" rel="tipsy-w"><img src="images/1.png" alt=""></a>
+										</div>
+									</div>
+									<div class="row">
 										<div class="4u">
 											<a href="http://nantes-data-journalisme.net" class="image image-full diapo" title="Laboratoire de Data Journalism" rel="tipsy-w"><img src="images/2.png" alt=""></a>
 										</div>
